--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ regex = "1.12.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.145"
 toml = "0.8"
+strum = "0.27"
+strum_macros = "0.27"
